# LocalWalnut

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  conftest.py  docker-compose.test.yml  dockerfile  gunicorn.conf.py  makefile  manage.py  pyproject.toml  staging.makefile  supervisord.conf
.github/workflows/: deploy_test.yml  run_pytest.yml
company/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  utils.py  validators.py  views.py
company/tests/: test_admin.py  test_models.py  test_utils.py  test_views.py
curriculum/: admin.py  apps.py  models.py  urls.py
curriculum/tests/: test_curriculum_admin.py  test_curriculum_models.py
dashboard/: urls.py  utils.py  views.py
dashboard/tests/: test_dashboard_views.py
employee/: admin.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
employee/tests/: test_employee_forms.py  (+2 more)
nginx/: nginx.conf
scheduler/: forms.py  models.py  tasks.py  urls.py  utils.py  views.py
services/: models.py  send_sms.py  twilio.py  urls.py  views.py
survey/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
templates/: add-curriculum.html  add-employee.html  add-questions.html  add-user.html  base.html  edit-employee.html  edit-schedule-curriculum.html  edit-schedule-sms.html  edit-survey.html  employee.html  forget_password.html  home.html  logout.html  quick-send.html  schedule-curriculum.html  schedule-sms.html  sms.html  superadmin.html  survey-qa.html  upload-data.html
walnuteq/: asgi.py  celery.py  settings.py  urls.py  utils.py  wsgi.py
(+44 files in other folders)
